--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3"
   }
